--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ h4{
 }
 header{
     background: rgb(17, 17, 17);
-    background-image: url("https://i.imgur.com/D9USQIj.png");
+    background-image: url("https://i.imgur.com/LuPoswy.png");
     padding: 30px 70px;
 
 }
 body{
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(26, 26, 26);
     margin: 0;
     background-repeat: repeat; /* repetindo a imagem no eixo x e y  */
     background-attachment: fixed; /* fixando a imagem de fundo */
